--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -6,18 +6,18 @@
       "dom.iterable",
       "esnext"
     ],
-    "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
+    "module": "commonjs",
+    "outDir": "dist",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "preserve"
+    "declaration": true,
+    "noImplicitAny": false,
+    "jsx": "react"
   },
   "include": [
     "src"
